--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
   body {
     font-family: Arial, Helvetica, sans-serif;
-    background: url("gb.svg") center/cover no-repeat, #f0f0f0;
+    background: url("background2.png") center/cover no-repeat, #f0f0f0;
     margin: 0;
     height: 100vh;
     display: flex;
@@ -198,3 +198,4 @@ window.addEventListener("beforeunload", disableWakeLock);
 
 </body>
 </html>
+
