--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 <style>
   body {
     font-family: Arial, Helvetica, sans-serif;
-    background: url("background2.png") center/cover no-repeat, #f0f0f0;
+    background-color: #f0f0f0;
+    background-image: url("background2.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     margin: 0;
     height: 100vh;
     display: flex;
@@ -198,4 +202,3 @@ window.addEventListener("beforeunload", disableWakeLock);
 
 </body>
 </html>
-
