--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     font-family: Arial, Helvetica, sans-serif;
     background-color: #f0f0f0;
     background-image: url("background2.png");
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     margin: 0;
@@ -202,3 +202,4 @@ window.addEventListener("beforeunload", disableWakeLock);
 
 </body>
 </html>
+
